--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+
+.bubble {
+  width: 25px;
+  height: 25px;
+  box-shadow: inset 0 0 10px #7997a1;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #7997a1;
+  border-radius: 50%;
+  margin: 2px;
+}
+
+.bubble-popped {
+  width: 25px;
+  height: 25px;
+  box-shadow: inset 0 0 10px #d6ebf2;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #d6ebf2;
+  border-radius: 50%;
+  margin: 2px;
+}
